--- a/manifest.json
+++ b/manifest.json
@@ -2,48 +2,18 @@
     "short_name": "Tareas",
     "name": "Tareas pendientes",
     "start_url": "index.html",
-    "background_color": "#3498db",
+    "background_color": "#51ca8c",
     "display": "standalone",
-    "theme_color": "#3498db",
+    "theme_color": "#51ca8c",
     "orientation": "portrait",
     "icons": [
         {
-            "src": "img/icons/icon-72x72.png",
-            "type": "image/png",
-            "sizes": "72x72"
-        },
-        {
-            "src": "img/icons/icon-96x96.png",
+            "src": "img/icons/icons-96x96.png",
             "type": "image/png",
             "sizes": "96x96"
         },
         {
-            "src": "img/icons/icon-128x128.png",
-            "type": "image/png",
-            "sizes": "128x128"
-        },
-        {
-            "src": "img/icons/icon-144x144.png",
-            "type": "image/png",
-            "sizes": "144x144"
-        },
-        {
-            "src": "img/icons/icon-152x152.png",
-            "type": "image/png",
-            "sizes": "152x152"
-        },
-        {
-            "src": "img/icons/icon-192x192.png",
-            "type": "image/png",
-            "sizes": "192x192"
-        },
-        {
-            "src": "img/icons/icon-384x384.png",
-            "type": "image/png",
-            "sizes": "384x384"
-        },
-        {
-            "src": "img/icons/icon-512x512.png",
+            "src": "img/icons/time.png",
             "type": "image/png",
             "sizes": "512x512"
         }
